syntax = "proto3";


package auth;

// The AuthService definition.
service AuthService {
  // Sends a greeting
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

// The request message containing the user's credentials.
message LoginRequest {
  string username = 1;
  string password = 2;
}

// The response message containing the login result.
message LoginResponse {
  string token = 1;
}

// The request message containing the token to validate.
message ValidateTokenRequest {
  string token = 1;
}

// The response message containing the validation result.
message ValidateTokenResponse {
  bool valid = 1;
}